# neuropad

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
apps/neuropad-desktop/: index.html  package-lock.json  package.json  vite.config.js
apps/neuropad-desktop/src/: App.svelte
apps/neuropad-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/neuropad-desktop/src-tauri/capabilities/: default.json
apps/neuropad-desktop/src-tauri/src/: kernel_manager.rs  main.rs
crates/neuropad-core/: Cargo.toml
crates/neuropad-core/src/: error.rs  ipynb.rs  lib.rs  metadata.rs  notebook.rs
crates/neuropad-core/tests/: interop.rs
crates/neuropad-ipc/: Cargo.toml
crates/neuropad-ipc/src/: lib.rs
info/: README.md  overview.md  quick-start.md
info_docs/: application-guide.md  how-to-use-neuropad.md
schemas/: ipc.schema.json  npad.schema.json
scripts/: build_installer.ps1  build_kernels.ps1  dev.ps1
services/go-kernel/: go.mod  ipc.go  main.go  runner.go  types.go
services/python-kernel/: python_kernel.py
services/python-portable/: README.md
services/ruby-kernel/: ruby_kernel.rb
services/ruby-portable/: README.md
