[package]
name = "neuropad-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
chrono.workspace = true
neuropad-core = { path = "../../../crates/neuropad-core" }
neuropad-ipc = { path = "../../../crates/neuropad-ipc" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
thiserror.workspace = true
uuid.workspace = true
